-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 10.0.2, Qt Creator 11.0.0
-
None
-
Kubuntu 20.04 and Kubuntu 23.04
-
-
3006dab72 (11.0), 17e932e30 (11.0)
This problem does not reproduce on Windows. Eike says it happens on Mac.
Someone else said it does not reproduce on Debian.
Edit - Preferences - Environment - Keyboard - Export ....
choose a file. Save. Nothing is saved.
For Gerrit Dashboard: QTCREATORBUG-29431 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
493106,2 | QmlDesigner: Fix wrong priority versus shortcut | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
493107,2 | Fix saving of keyboard schemes in presence of broken shortcut | 11.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |