QmlDesigner: Fix wrong priority versus shortcut

The arguments were mixed up, resulting in a shortcut of `\u0002`

Amends 14b86100b52990570308f0ec3f7c727801d4ab85

Fixes: QTCREATORBUG-29431
Change-Id: I10cf959a9f9b24df1d1f544ad3ea80b1b2060751
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>